# pattern-report

./: .gitignore  LICENSE.txt  README.md  config.toml  launch.bat  main.py  pyproject.toml
